1998-06-05  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/sm/sm.c:
	    Added "H" flag to the "sm" facility flags.
	    Altered here the way the BSMTP mode has worked for
	    ages.  Specifically 

	* utils/rotate-logs.sh.in, configure.in, utils/Makefile.in:
	    Made "rotate-logs" utility to be 1) autoconfig, and
	    2) installed every time a "make install" is done.

	* smtpserver/smtpserver.c:
	    Some clients seem to send "QUIT\r", and then close the
	    socket.  This caused indigestion and error logging.
	    Now it will at least tell what the input was, and
	    then have indigestion complaints..

	* proto/zmailer.sh.in, proto/Makefile.in, proto/newdb.in:
	    - Alterations on "zmailer" command, streamlining, adding
	      a "zmailer makedb" function to compile all common database.
	    - Option processing improvements on  newdb  to allow arbitary
	      order of options affecting the underlying  makedb.
	    - Makefile changes to (possibly) improve "make forms"
	      installation processing to be more generic.
	
	* utils/vacation/vacation.c:
	    Add HAVE_DB_H test to be third known/supported database.
	    Will it be sufficient for all environments shall be seen..

	* utils/vacation/convtime.c:
	    Add a couple autoconf includes

1998-06-04  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/newdb.in:
	    Smarter option processing, usage() function.

	* compat/sendmail/sendmail.c:
	    Recognize when no message was collected, and silently
	    ignore such input.

	* compat/sendmail/sendmail.c:
	    - Parse and verify option parameters for -B and -p options
	    - implement -s option (save From_)
	    - wrote a REAL usage() report -- try 'sendmail -?' to see

	* smtpserver/smtpcmds.c:
	    When presenting diagnostics on bad parameters on MAIL command,
	    the server used occasionally response number 455, where it
	    should use 501 -- cosmetic bug, I would say..

1998-06-03  Matti Aarnio  <mea@mea.tmt.tele.fi>
